--- a/site/blueprints/files/video.yml
+++ b/site/blueprints/files/video.yml
@@ -8,7 +8,7 @@ fields:
     label: Thumbnail
     type: files
     uploads:
-      template: cover
+      template: image
     multiple: false
     layout: cards
     image:
