--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "This is the repository for my personal website.",
   "main": "index.js",
   "scripts": {
+    "start": "php -S localhost:8000 kirby/router.php",
     "css:build": "sass site/css:assets/css --source-map",
     "css:watch": "sass -w site/css:assets/css --source-map"
   },
