--- a/composer.json
+++ b/composer.json
@@ -18,8 +18,8 @@
         "source": "https://github.com/getkirby/starterkit"
     },
     "require": {
-        "php": ">=7.1.0",
-        "getkirby/cms": "^3.8"
+        "php": ">=8.0.0 <8.3.0",
+        "getkirby/cms": "^3.9"
     },
     "scripts": {
       "start": [
