--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
     },
     "require": {
         "php": ">=8.0.0 <8.3.0",
-        "getkirby/cms": "^3.9"
+        "getkirby/cms": "^3.9",
+        "tobimori/kirby-seo": "^0.3.4"
     },
     "scripts": {
       "start": [
