--- a/site/blueprints/pages/contact.yml
+++ b/site/blueprints/pages/contact.yml
@@ -5,23 +5,9 @@ tabs:
     label: Content
     icon: text
     fields:
-      email:
-        label: E-Mail
-        type: email
-        required: true
-      facebook:
-        label: Facebook
-        type: text
-        icon: facebook
-        required: true
-      twitter:
-        label: Twitter
-        type: text
-        icon: twitter
-        required: true
-      github:
-        label: GitHub
-        type: text
-        icon: github
+      intro:
+        label: Intro
+        type: textarea
+        size: small
         required: true
   seo: seo/page
