feat: add disclaimer

--- a/site/blueprints/pages/imprint.yml
+++ b/site/blueprints/pages/imprint.yml
@@ -53,6 +53,13 @@ tabs:
                 type: text
                 required: true
                 translate: false
+          additionalInformation:
+            type: fields
+            fields:
+              additionalInformation:
+                label: Additional Information
+                type: textarea
+                size: large
       meta:
         width: 1/3
         sections:
