--- a/site/blueprints/pages/work.yml
+++ b/site/blueprints/pages/work.yml
@@ -20,6 +20,7 @@ tabs:
                 image:
                   ratio: 16/9
                   cover: true
+                translate: false
               description:
                 type: textarea
                 size: medium
@@ -30,64 +31,90 @@ tabs:
               projectType:
                 width: 1/2
                 label: Project Type
-                type: tags
-                options: query
-                query: page.siblings.pluck("projectType", ",", true)
+                type: select
+                options:
+                  hobby: Hobby
+                  assignment: University Assignment
+                  commission: Commission
                 required: true
+                translate: false
               scopes:
                 width: 1/2
                 label: Scopes
-                type: tags
-                options: query
-                query: page.siblings.pluck("scopes", ",", true)
+                type: multiselect
+                min: 1
+                options:
+                  web: Web Design
+                  ui: User Interface Design
+                  ux: User Experience Design
+                  cd: Corporate Design
+                  gd: Graphic Design
+                  gamed: Game Design
+                  envd: Environment Design
+                  mg: Motion Graphics
+                  pm: Project Management
+                  frontenddev: Frontend Development
+                  backenddev: Backend Development
+                  appdev: Application Development
+                  cms: Content Management Systems
+                  seo: Search Engine Optimization
                 required: true
+                translate: false
               tools:
                 width: 1/2
                 label: Tools used
                 type: tags
                 options: query
                 query: page.siblings.pluck("tools", ",", true)
+                translate: false
               technologies:
                 width: 1/2
                 label: Technologies used
                 type: tags
                 options: query
                 query: page.siblings.pluck("technologies", ",", true)
+                translate: false
               startYear:
                 width: 1/3
                 label: Start Year
                 type: number
                 min: 1970
                 required: true
+                translate: false
               startMonth:
                 width: 1/3
                 label: Start Month
                 type: number
                 min: 1
                 max: 12
+                translate: false
               startDay:
                 width: 1/3
                 label: Start Day
                 type: number
                 min: 1
                 max: 31
+                translate: false
               endYear:
                 width: 1/3
                 label: End Year
                 type: number
                 min: 1970
+                translate: false
               endMonth:
                 width: 1/3
                 label: End Month
                 type: number
                 min: 1
                 max: 12
+                translate: false
               endDay:
                 width: 1/3
                 label: End Day
                 type: number
                 min: 1
                 max: 31
+                translate: false
       meta:
         width: 1/3
         sections:
@@ -105,6 +132,7 @@ tabs:
                     label: Name
                     type: text
                     required: true
+                translate: false
               links:
                 width: 1/2
                 label: Links
@@ -118,4 +146,5 @@ tabs:
                     label: URL
                     type: url
                     required: true
+                translate: false
   seo: seo/page
