feat(content): update some texts and add all missing German translations

--- a/site/blueprints/pages/work.yml
+++ b/site/blueprints/pages/work.yml
@@ -22,8 +22,7 @@ tabs:
                   cover: true
                 translate: false
               description:
-                type: textarea
-                size: medium
+                type: writer
                 required: true
           details:
             type: fields
