--- a/composer.json
+++ b/composer.json
@@ -17,9 +17,8 @@
         "source": "https://github.com/lukasobermann/website"
     },
     "require": {
-        "php": ">=8.1.0 <8.4.0",
-        "getkirby/cms": "^3.9",
-        "tobimori/kirby-seo": "^0.3.4"
+        "php": "~8.2.0 || ~8.3.0 || ~8.4.0",
+        "getkirby/cms": "^5.0"
     },
     "scripts": {
       "start": [
