--- a/site/blueprints/fields/themeColor.yml
+++ b/site/blueprints/fields/themeColor.yml
@@ -1,6 +1,5 @@
 label: Color
-type: text
-pattern: "^#[0-9a-fA-F]{6}|rgba\\([0-9]{1,3}, *[0-9]{1,3}, *[0-9]{1,3}, *(?:0|1|0\\.\\d+)\\)$"
+type: color
 translate: false
 required: true
 when:
